following status in listing, article challenges tagging + momspressotv fixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -549,6 +549,7 @@
     <service android:name=".sync.FetchAdvertisementInfoService" />
     <service android:name=".sync.FetchPublicIpAddressService" />
     <service android:name=".sync.SyncUserInfoService" />
+    <service android:name=".sync.SyncUserFollowingList" />
     <service android:name=".tts.ReadArticleService" />
 
     <receiver
