View Short story comments from listing + bug fixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -532,6 +532,9 @@
       android:name=".ui.activity.BlockUnBlockUserActivity"
       android:screenOrientation="portrait" />
     <activity
+      android:name=".ui.activity.ViewAllCommentsActivity"
+      android:screenOrientation="portrait" />
+    <activity
       android:name=".ui.activity.SecuritySettingActivity"
       android:screenOrientation="portrait" />
     <activity
