--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ android {
         applicationId "com.mycity4kids"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 207
-        versionName "15.1.0"
+        versionCode 208
+        versionName "15.1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -166,6 +166,8 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.github.vihtarb:tooltip:1.0.0-alpha05-SNAPSHOT'
+    implementation "com.github.skydoves:balloon:1.2.3"
 }
 
 detekt {
