--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,6 +168,8 @@ dependencies {
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.github.vihtarb:tooltip:1.0.0-alpha05-SNAPSHOT'
     implementation "com.github.skydoves:balloon:1.2.3"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
+
 }
 
 detekt {
